--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -1,44 +1,43 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
             ng-click="vm.cancel()">&times;</button>
-    <h4 class="modal-title">Sign in</h4>
+    <h4 class="modal-title">Se connecter</h4>
 </div>
 <div class="modal-body">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <h1>Sign in</h1>
+            <h3>Se connecter</h3>
         </div>
         <div class="col-md-8 col-md-offset-2">
             <div class="alert alert-danger" ng-show="vm.authenticationError">
-                <strong>Failed to sign in!</strong> Please check your credentials and try again.
+                <strong>La connection est échoué!</strong> Veuillez vérifier votre identifiant et mot de passe
             </div>
         </div>
         <div class="col-md-8 col-md-offset-2">
             <form class="form" role="form" ng-submit="vm.login($event)">
                 <div class="form-group">
-                    <label for="username">Login</label>
+                    <label for="username">Identifiant</label>
                     <input type="text" class="form-control" id="username" placeholder="Your username" ng-model="vm.username">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Mot de passe</label>
                     <input type="password" class="form-control" id="password" placeholder="Your password"
                            ng-model="vm.password">
                 </div>
                 <div class="form-group">
                     <label for="rememberMe">
                         <input type="checkbox" id="rememberMe" ng-model="vm.rememberMe" checked>
-                        <span>Remember me</span>
+                        <span>Se souvenir de moi</span>
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Se connecter</button>
             </form>
             <p></p>
             <div class="alert alert-warning">
-                <a class="alert-link" href="" ng-click="vm.requestResetPassword()">Did you forget your password?</a>
+                <a class="alert-link" href="" ng-click="vm.requestResetPassword()">Vous avez oubliés votre mot de passe?</a>
             </div>
             <div class="alert alert-warning">
-                You don't have an account yet? <a class="alert-link" href="" ng-click="vm.register()">Register a new account</a>
-            </div>
+                Vous devez contacter votre administrateur si vous n'avez pas de compte.</div>
         </div>
     </div>
 </div>
