--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -94,6 +94,12 @@
                                                 <span >Auteur</span>
                                             </a>
                                         </li>
+                                        <li ui-sref-active="active">
+                            <a ui-sref="livre" ng-click="vm.collapseNavbar()">
+                                <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                <span >Livre</span>
+                            </a>
+                        </li>
                                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here
                     </ul> -->
                 </li>
