--- a/src/main/webapp/app/layouts/error/accessdenied.html
+++ b/src/main/webapp/app/layouts/error/accessdenied.html
@@ -1,9 +1,6 @@
 <div ng-cloak>
-    <div class="row">
-        <div class="col-md-4">
-            <span class="hipster img-responsive img-rounded"></span>
-        </div>
-        <div class="col-md-8">
+    <div class="row" >
+        <div class="col-md-8" id="mainCenter">
             <h1>Error Page!</h1>
 
             <div class="alert alert-danger">You are not authorized to access the page.
