--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -37,15 +37,22 @@
 
                 <li ui-sref-active="active">
                     <a ui-sref="emprunt" ng-click="vm.collapseNavbar()">
-                        <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                        <span class="glyphicon glyphicon-refresh"></span>&nbsp;
                         <span >Empruntes</span>
                     </a>
                 </li>
 
                 <li ui-sref-active="active">
                     <a ui-sref="reservation" ng-click="vm.collapseNavbar()">
-                        <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                        <span class="glyphicon glyphicon-send"></span>&nbsp;
                         <span >Reservations</span>
+                    </a>
+                </li>
+
+                <li ui-sref-active="active">
+                    <a ui-sref="usager" ng-click="vm.collapseNavbar()">
+                        <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                        <span >Usager</span>
                     </a>
                 </li>
 
@@ -100,6 +107,12 @@
                                 <span >Livre</span>
                             </a>
                         </li>
+                                        <li ui-sref-active="active">
+                            <a ui-sref="magazine" ng-click="vm.collapseNavbar()">
+                                <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                <span >Magazine</span>
+                            </a>
+                        </li>
                                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here
                     </ul> -->
                 </li>
@@ -152,7 +165,7 @@
                         </li>
                     </ul>
                 </li>
-              <!--  <li ng-class="{active: vm.$state.includes('admin')}"  ng-switch-when="true" has-authority="ROLE_ADMIN" uib-dropdown class="dropdown pointer">
+               <li ng-class="{active: vm.$state.includes('admin')}"  ng-switch-when="true" has-authority="ROLE_ADMIN" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="admin-menu">
                         <span>
                             <span class="glyphicon glyphicon-tower"></span>
