--- a/src/main/webapp/app/layouts/error/accessdenied.html
+++ b/src/main/webapp/app/layouts/error/accessdenied.html
@@ -3,7 +3,7 @@
         <div class="col-md-8" id="mainCenter">
             <h1>Error Page!</h1>
 
-            <div class="alert alert-danger">You are not authorized to access the page.
+            <div class="alert alert-danger">Vous n'êtes pas autorisé à accéder à ce site.
             </div>
         </div>
     </div>
